[gd_scene load_steps=7 format=2]

[ext_resource path="res://ball/ball_sprite.png" type="Texture" id=1]
[ext_resource path="res://ball/ball.gd" type="Script" id=2]
[ext_resource path="res://ball/ball_audio.gd" type="Script" id=3]
[ext_resource path="res://ball/ball_hit.mp3" type="AudioStream" id=4]
[ext_resource path="res://ball/ball_hit_side.mp3" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Sounds" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BallHitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="WallHitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
pitch_scale = 1.5

[connection signal="bounced" from="." to="Sounds" method="_on_ball_bounced"]
[connection signal="hitted" from="." to="Sounds" method="_on_ball_hit"]
